# patdb

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: run_tests.yml
patdb/: __main__.py  _core.py  _pytest_plugin.py
patdb/_pprint/: __init__.py  _definitions.py  _wadler_lindig.py
tests/: breakpoint.py  cause_in_group.py  closure.py  groups.py  in_class.py  in_method.py  long_traceback.py  multi_processes.py  nested_cause.py  nested_groups.py  no_tracebacks.py  not_builtin.py  pool.py  raise_same_exception.py  single_suppress.py
